# infermap

./: .dockerignore  .gitignore  .mcpignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile.mcp  LAUNCHGUIDE.md  Makefile  README.md  SECURITY.md  infermap.yaml.example  package.json  pyproject.toml  server.json  smithery.yaml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: benchmark.yml  npm-publish.yml  pages.yml  publish.yml  regression-ack.yml  test.yml  try-examples.yml  try-it.yml
bench-calibrators/: valentine-iso.json  valentine-platt.json
benchmark/: .gitignore  README.md  aggregate.py  build_baseline.py  check_regression.py  manifest.json  report.schema.json  synthetic.config.json
benchmark/baselines/: main.json  main.metadata.json
benchmark/runners/python/: README.md  pyproject.toml
benchmark/runners/python/infermap_bench/: __init__.py  __main__.py  calibrate.py  cases.py  cli.py  compare.py  manifest.py  metrics.py  report.py  runner.py  synthetic.py
benchmark/runners/python/tests/: conftest.py
benchmark/runners/python/tests/unit/: test_aggregate.py  test_build_baseline.py  test_cases.py  test_check_regression.py  test_cli.py  test_compare.py  test_manifest.py  test_metric_parity.py  test_metrics.py  test_report.py  test_runner.py  test_smoke.py  test_synthetic_generator.py  test_synthetic_transforms.py
benchmark/scripts/: extract_valentine.py
benchmark/self-test/: manifest.json  (+1 more)
docs/: _config.yml  benchmark.md  cli.md  configuration.md  domain-dictionaries.md  getting-started.md  index.md  providers.md  scorers.md
examples/: 01_basic_mapping.py  02_dataframe_mapping.py  03_database_mapping.py  04_schema_file.py  05_custom_scorer.py  06_save_and_reuse.py  07_cli_walkthrough.sh  08_benchmark_introspection.py  09_domain_dictionaries.py  10_calibration.py  README.md
infermap/: __init__.py  assignment.py  calibration.py  cli.py  config.py  engine.py  errors.py  types.py
scripts/: gen_parity_goldens.py  infermap_demo.ipynb
tests/: conftest.py  test_assignment.py  test_calibration.py  test_cli.py  test_config.py  test_dictionaries.py  test_e2e.py  test_engine.py  test_engine_score_matrix.py  test_prefix_and_initialism.py  test_regression.py  test_types.py
(+431 files in other folders)
